--- a/_less/lowerbannerhome.less
+++ b/_less/lowerbannerhome.less
@@ -9,13 +9,14 @@
 .lower_banner{
     
   border: 1px solid transparent;
-  background-color: #f6f6f6;
-  border-top: solid;
+  background-color: #ececec;
+ /* border-top: solid;
   border-bottom: solid;
   border-top-color: #E5EAEE;
   border-bottom-color: #E5EAEE;
-  border-top-width: 1px;
-  margin-top: 40px;
+  border-top-width: 3px;
+  border-bottom-width: 3px; */
+  padding-bottom: 100px;
     
     
     @media (max-width: 768px){
@@ -38,7 +39,6 @@
   display: table;
   padding-left: 10px;
   padding-right: 10px;
-  margin-bottom: 60px;
   position: relative;
   top: 10px;
   
@@ -97,13 +97,14 @@
 /* Contents CSS */
 
 
+
 .banner_heading{
     
     font:200 28px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
     font-weight: bold;
     color: #ffb441;
     text-align: left;
-    margin-top: 40px;
+    margin-top: 100px;
     margin-bottom: 35px;
     letter-spacing: 1px;
     
