--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -27,7 +27,7 @@ color: #666666;
 .banner-custom{
     
 text-align: left;
-height: 100px;
+height: 160px;
 
 }
 
@@ -752,23 +752,39 @@ a.link_grey:link{
 
 #sidebarmodule-dev:hover{
     
-    background-color: #f9f9f9;
+    background-color: #BAC147;
     transition-duration: 0.5s;
+    border-color: #BAC147;
     
 }
 
 #sidebarmodule-dev:hover #category-heading-dev{
 
     transition-duration: 0.5s;
+    color: #fff;
 
 }
 
 #sidebarmodule-dev:hover .developer_icon{
 
-
-
     transition-duration: 0.5s;
+    color: #fff;
 }
+
+#sidebarmodule-dev:hover .caret-right{
+  
+    transition-duration: 0.5s;
+    color: #fff;
+}
+
+#sidebarmodule-dev:hover .description-part{
+    
+    transition-duration: 0.5s;
+    color: #fff;
+    
+}
+
+
 
 
 /* Developer Icon */
