--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
 
 		   	<!-- banner -->
 				{% if page.hide_welcome_banner == null || page.hide_welcome_banner == false %}
-					<div class="banner-container">
+				
+            <!--      <div class="banner-container">
 						<div class="row">
 							<div class="banner-custom">
 								<div class="container">
@@ -37,7 +38,23 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div>  -->
+    
+                    <div class="banner-container">
+                          <div class="row">
+                                <div class="banner-custom">
+                                    <div class="container">
+									   
+                                            <h1 class="banner-title">Welcome to our HelpCenter</h1>
+                                        
+                                    </div>        
+                                </div>
+
+                           </div>
+
+                    </div> 
+
+
 				{% endif %}
 			<!-- banner ends -->
 
