--- a/_less/purplebanner.less
+++ b/_less/purplebanner.less
@@ -7,10 +7,18 @@
 
 
 /* Purple Banner with link to image */
+
+
 .banner-container {
-  margin-bottom: 20px;
+  
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    color: #dfdfdf;
+    margin-bottom: 60px;
+    
 }
 
+/*
 .banner-custom{
 
 text-align: left;
@@ -18,7 +26,7 @@ height: 250px;
 background-image: url(http://res.illumina.com/images/rgh/hero/childpageheader-prpl240-v2.jpg);
 
 
-}
+}  */
 
 /* http://res.illumina.com/images/rgh/hero/childpageheader-prpl240-v2.jpg */   /* Purple Bckgrnd */
 
