--- a/_includes/article-breadcrumbs.html
+++ b/_includes/article-breadcrumbs.html
@@ -28,9 +28,9 @@
 						<span class="bs-nav-back-text">Help Center</span>
 					</a>
 					{% endif %}
-					<h3 class="bs-nav-title">
+					<p class="bs-nav-title">
 						<span class="bs-nav-title-text">{{ page.title }}</span>
-					</h3>
+					</p>
 				</div>
 			</div>
 		</div>
