--- a/_less/articlestep.less
+++ b/_less/articlestep.less
@@ -40,7 +40,8 @@
 }    
 
 .step-title {
-	margin-top: 23px;
+	margin-top: -87px;
+	padding-top: 110px;
 	padding-left: 35px;
 	font-family: "HelveticaNeueW01-ThinEx 710288";
 	font-weight: bold;
@@ -77,6 +78,7 @@
 .scr-image {
 	border: 2px solid #e5e5e5;
 	margin-top: 25px;
+	margin-bottom: 15px;
 	padding:10px;
     background-image:linear-gradient(to bottom, rgba(242, 242, 242, 1) 0%, rgba(242, 242, 242, 1) 100%), linear-gradient(to bottom, rgba(242, 242, 242, 1) 0%, rgba(242, 242, 242, 1) 100%);
     background-clip: content-box, padding-box;
