issues fixed on articles list page
- alignment
- horizontal line
- font color
- hover effect

--- a/_less/accordioncustom.less
+++ b/_less/accordioncustom.less
@@ -22,6 +22,7 @@
   .accordion-new {
     padding-top: 10px;
     margin-bottom: 0px;
+    margin-left: 25px;
   }
 
   
@@ -33,10 +34,6 @@
   }
 
   
-
-
-
-
  /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
                                             Accordion Title, Links
@@ -55,12 +52,16 @@
     position: relative;
   }
 
+  .accordion-title:hover {
+    color: #328ed1;
+  }
+
   .accordion-title-desc{
     padding: 0px 10px 0px 0px;
-      font:200 14px/1.2em "pt-sans-regular",sans-serif;
-      color: #bbbbbb;
-      position: relative;
-      left: 25px;
+    font:200 14px/1.2em @font-text,sans-serif;
+    color: #bbbbbb;
+    position: relative;
+    left: 25px;
   }
 
   .toggle-icon {
