--- a/_less/landingpage.less
+++ b/_less/landingpage.less
@@ -8,6 +8,9 @@
     
 }
 
+#landingpage-main {
+  margin-left: 10px;
+}
 
 .landingpage-title{
     
@@ -22,9 +25,9 @@
 
 
 .landingpage-p{
-    
+  font:200 14px/1.2em @font-text,sans-serif;  
   position: relative;
-  left: 15px;
+  left: 12px;
 }
 
 
@@ -36,33 +39,10 @@
   border: 0;
   border-top: 1px solid #dfdfdf;
   border-bottom: 1px solid #fff;
+  margin-left: 10px;
 }
 
-.leftsection-heading{
-    
-    font:100 18px/1.2em @font-text, sans-serif;
-    color: #666666;
-    position: relative;
-    bottom: 20px;
-}
 
-.leftsection-text {
-    
-    font:12px/1.2em @font-text, sans-serif;
-    color: @footer-color;
-    position: relative;
-    bottom: 20px;
-    
-}
-
-.line{
-    
-      border: solid;
-      border-color: #e5e5e5;
-      border-width: 1px;
-
-    
-}
 
 
 
