changes in Home page

--- a/_less/homepage.less
+++ b/_less/homepage.less
@@ -1,8 +1,8 @@
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
-                                                                Body Home
+                                                    Body Home
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 .styling_home{
@@ -16,12 +16,9 @@ color: #666666;
 
 /* %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%
 
-                                                                Homepage banner
+                                                    Homepage banner
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
-
-
-
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 .banner-custom{
@@ -60,7 +57,7 @@ border-bottom: 1px solid #fff;
 
                                            Popular Articles Section
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 /* Popular Articles Links Section */
@@ -126,7 +123,7 @@ border-bottom: 1px solid #fff;
 
                                             Categories Section
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 
 
@@ -156,6 +153,7 @@ a.link_grey:link{
     padding-bottom: 1rem !important;
     padding-right: 5rem !important;
     position: relative;
+    align: center;
     display: table-cell;
     vertical-align: middle;
 
@@ -374,7 +372,7 @@ a.link_grey:link{
     border-color: #bbbbbb;
     border-radius: 3px;
     background-color: #ffffff;
-    display: table;
+    display: block;
     width: 105%;
     height: 110px;
     
@@ -403,7 +401,7 @@ a.link_grey:link{
 #category-heading-articles{
 
     font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
+    color: #666666;
     margin-left: 20px;
     letter-spacing: 1px;
     line-height: 1.5;
@@ -456,8 +454,7 @@ a.link_grey:link{
     background-color: #ffb441;
     transition-duration: 0.5s;
     border-color: #ffb441;
-    
-    
+   
 }
 
 #sidebarmodule-articles:hover #category-heading-articles{
@@ -526,7 +523,7 @@ a.link_grey:link{
 
                                             Forum Section CSS
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 /* Forum Hover CSS */
 
@@ -704,7 +701,7 @@ a.link_grey:link{
 #category-heading-dev{
 
     font: 800 20px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    color: #ffb441;
+    color: #666666;
     margin-left: 20px;
     letter-spacing: 1px;
     line-height: 1.5;
@@ -865,7 +862,7 @@ a.link_grey:link{
 
 .video-heading{
     
-    font: 200 28px/1.2em "HelveticaNeueW01-LtExt",sans-serif;
+    font: 200 28px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
     color: #ffb441;
     text-align: left;
     letter-spacing: 1px;
@@ -874,3 +871,6 @@ a.link_grey:link{
     
 }
 
+.video-container {
+     margin-left: 20%;
+}
