--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,15 +43,13 @@
                     <div class="banner-container">
                           <div class="row">
                                 <div class="banner-custom">
-                                    <div class="container">
-									   
-                                            <h1 class="banner-title">Welcome to our HelpCenter</h1>
-                                        
+                                    <div class="row">
+									    <div class="col-xs-8 col-xs-offset-2">
+									    	  <h1 class="banner-title">Welcome to our HelpCenter</h1>
+									    </div>
                                     </div>        
                                 </div>
-
                            </div>
-
                     </div> 
 
 
