--- a/_less/lowerbannerhome.less
+++ b/_less/lowerbannerhome.less
@@ -10,24 +10,20 @@
     
   border: 1px solid transparent;
   background-color: #ececec;
- /* border-top: solid;
-  border-bottom: solid;
-  border-top-color: #E5EAEE;
-  border-bottom-color: #E5EAEE;
-  border-top-width: 3px;
-  border-bottom-width: 3px; */
   padding-bottom: 100px;
     
     
     @media (max-width: 768px){
                                 
-                                padding-bottom: 30px;
+      padding-bottom: 30px;
     
     }
-  
 
 }
 
+.lower-banner-container {
+  margin-left: 20%;
+}
 
 /* **************************************************************************************************************** */
 
@@ -101,10 +97,9 @@
 .banner_heading{
     
     font:200 28px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
-    font-weight: bold;
     color: #ffb441;
     text-align: left;
-    margin-top: 100px;
+    margin-top: 10px;
     margin-bottom: 35px;
     letter-spacing: 1px;
 }
