FIXED - Article sidenav responsive bug
Fixed the article page sidenav alignment bug

--- a/_includes/article-breadcrumbs.html
+++ b/_includes/article-breadcrumbs.html
@@ -2,7 +2,7 @@
 
 	<div class="row">
 		<div class="bs-nav-titlebar">
-			<div class="col-xs-2 title-left">
+			<div class="col-sm-2 title-left">
 				{% if page.section_root == null || page.section_root == false %}
 					<!-- vertical line -->
 			        <div class="vertical-line"></div>
@@ -13,7 +13,7 @@
 		       		</div></a>
 		        {% endif %}
 	        </div>
-			<div class="col-xs-9">
+			<div class="col-sm-9 col-xs-11">
 				<div class="bs-nav-titlebar-group">
 					{% if page.section_root == null || page.section_root == false %}
 					<a class="btn illumina-gray bs-nav-back" href="{{ site.baseurl }}/articles/">
