--- a/_less/variables.less
+++ b/_less/variables.less
@@ -5,6 +5,9 @@
 /* Bootstrap less customization */
 @grid-gutter-width: 0px;
 
+/* Responsive sizes */
+@media-xs-max: 767px;
+
 /*Colors for headers, banners, footers*/
 
 @header-color: #868686; //dark grey
