minor changes in style

--- a/_less/articlestep.less
+++ b/_less/articlestep.less
@@ -8,19 +8,33 @@
 	border-top: 4px solid #9EC4EB;
 	width: 6.5%;
 	float: left;
+
+	@media (max-width: 1440px){
+                                width: 7.2%;
+                              }
 }
 
 .step-heading {
 	margin-top: 20px;
 	padding-left: 4%;
+
+	@media (max-width: 1440px){
+                                padding-left: 2%;
+                              }
 }
 
 .the-step {
 	font-family: "pt-sans-regular";
-    font-size: 130%;
+    font-size: 120%;
     color: #bbbbbb;
     float: left;
     margin-top: -1px;
+    padding-right: 2px;
+
+    @media (max-width: 1440px){
+                               font-size: 95%;
+                              }
+   
 }
 
 .step-number {
@@ -30,6 +44,10 @@
     font-weight: bold;
     float: right;
     margin-top: 2px;
+
+    @media (max-width: 1440px){
+                                font-size: 180%;
+                              }
 }
 
 .right-column{
