Google custom search integration
- Google custom search integrated.
- currently searches to the current help site URL
(https://support.basespace.illumina.com), which can be easily replaced
with the new URL at any point.
- Search box customized to suit the help site look and feel.

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -17,3 +17,4 @@
 <script src="{{ site.baseurl }}/js/video.js"></script>
 <script src="{{ site.baseurl }}/js/navigation.js"></script>
 <script src="{{ site.baseurl }}/js/gettingstarted.js"></script>
+<script src="{{ site.baseurl }}/js/googlecse.js"></script>
