--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,19 @@
 
 		  	<!-- header -->
 		  	<div class="header navbar-fixed-top">
-		  	    <a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> <!-- custom css -->
-		        <a class="header-brand-illumina" href="http://www.illumina.com/">illumina</span></a> <!-- custom css -->
+		  	    <a class="header-brand-baseSpace" href="{{ site.baseurl }}/">BaseSpace HelpCenter</span></a> 
+		  	    <div id="googlecse">	<!-- Google Custom Search Engine -->
+		  	    	<gcse:search></gcse:search>
+		  	    </div>
+		  	    <a class="header-brand-illumina" href="http://www.illumina.com/">illumina</span></a> 
+		  	    <div id="custom_search">
+		  	    	<form id="searchbox_010275296426726970113:l7dpr8y7y3m" action="">
+					    <input value="010275296426726970113:l7dpr8y7y3m" name="cx" type="hidden"/>
+					    <input value="FORID:11" name="cof" type="hidden"/>
+					    <input id="q" name="q" size="75" type="text" placeholder="Search BaseSpace Help ...." />
+					</form>	
+		  	    </div>
+		  	    
 		   	</div> 
 		   	<!--header ends-->
 
