--- a/_less/headerfooter.less
+++ b/_less/headerfooter.less
@@ -36,19 +36,37 @@ body {
   padding-top: 15px;
   font: 200 22px/1.2em "HelveticaNeueW01-ThinEx 710288",sans-serif;
   color: #666666;
+  position: relative;
+}
+
+/* Google search box */
+#googlecse {
+  width:0px;
+  overflow:hidden;
+  height:0px; 
+}
+
+#custom_search {
+  position: relative;
+  float: right;
+  padding-top: 18px;
+  padding-right: 20px;
+}
+
+input {
+  border: 1px solid #cfcfcf;
+  border-radius: 3px;
+  padding-left: 5px;
 }
 
 .container-fluid-header {               /* Custom container fluid without padding */
-
   margin-right: auto;
   margin-left: auto;
 }
 
 .image-header{
-
     width: 100%;
     height: 65px;
-
 }
 
 
@@ -56,7 +74,7 @@ body {
 
                                            BASESPACE FOOTER
 
-            %&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
+   &%&%&%&%&%&%&%&%&%&%&%&%&%&%&%%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&%&% */
 
 .custom-footer {                   /* Footer CSS */
 
